# pyeco

./: README.md  README_DEV.md  environment.yml  pyproject.toml  requirements.txt
exercises/: 00-python_basics.md  01-data_manipulation.md
notebooks/: 00-python_basics.ipynb  01-manipulating_data.ipynb  02-download_data.ipynb  02-download_data_solved.ipynb  03-sql.ipynb  04-figures.ipynb  05-machinelearning.ipynb  06-llms.ipynb  07-test.ipynb  gdp_per_capita.csv  illiteracy_rate.csv
