[project]
name = "pyeco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.4.0",
    "geopandas>=1.1.2",
    "ipython>=9.9.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.2",
    "typer>=0.21.1",
    "yfinance>=1.1.0",
]
